# LATTICE

./: .gitignore  CHANGELOG.md  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  REPRODUCE.md  SECURITY.md  conftest.py  lattice-v1.1.0.patch  pyproject.toml  requirements.txt
docs/: overview.md  roadmap.md
evidence/: adversarial_suite.json  adversarial_suite.py  determinism.json  determinism.py  domain_matrix.json  miscalibration_eval.json  miscalibration_eval.py  owasp_matrix.json  repro_ledger.json  reproduce_all.py  results_ledger.md  threshold_sweep.json  threshold_sweep.py
examples/: lattice_demo.py  run_demo.py
lattice_ref/: audit_log.py  canonicalize.py  execution_gate.py  hashing.py  policy_engine.py
policies/: policy_bundle_strict.json
schemas/: action_bundle.schema.json  audit_record.schema.json  evidence_record.schema.json  policy_bundle.schema.json
scripts/: package_handoff.sh
spec/: architecture.md  formal_properties.md  terminology.md
test_vectors/: expected_verdicts.json
tests/: test_action_bundle_schema.py  test_audit_chain_infrastructure.py  test_bundle_signing.py  test_bundle_signing_expanded.py  test_confidence_score.py  test_coordination_security.py  test_crypto_passphrase.py  test_crypto_primitives.py  test_decision_tree_comprehensive.py  test_decision_tree_engine.py  test_decision_tree_model.py  test_decision_tree_schema.py  test_domain_transfer.py  test_execution_gate_unit_toctou.py  test_gate_reachability_invariant.py  test_governance_engine_matrix.py  test_miscalibration_eval.py  test_native_rule_vectors.py  (+15 more)
(+47 files in other folders)
