[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "lattice-governance"
version = "1.0.0"
description = "LATTICE: A Governance-First Architecture for Autonomous AI Agent Authorization"
readme = "README.md"
license = {text = "Apache-2.0"}
requires-python = ">=3.10"
authors = [
    {name = "Cal Boreanu", email = "ecalboreanu@gmail.com"},
]
keywords = ["ai-governance", "autonomous-agents", "policy-enforcement", "audit", "safety"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Security",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "rfc8785>=0.1.2",
    "cryptography>=41.0",
    "jsonschema>=4.20",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
]

[project.urls]
Homepage = "https://github.com/calboreanu/LATTICE"
Documentation = "https://github.com/calboreanu/LATTICE/tree/main/docs"
Repository = "https://github.com/calboreanu/LATTICE"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
